// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be work with icon 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><span class=\\"input-icon\\"><span>test-icon</span><style>
        .input-icon {
          box-sizing: content-box;
          display: flex;
          width: calc(1.687 * 16px * .42);
          height: 100%;
          align-items: center;
          vertical-align: middle;
          margin: 0;
          padding: 0 calc(1.687 * 16px * .3);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span><input type=\\"text\\" class=\\"left-icon\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"right-icon\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"><span class=\\"input-icon\\"><span>test-icon</span><style>
        .input-icon {
          box-sizing: content-box;
          display: flex;
          width: calc(1.687 * 16px * .42);
          height: 100%;
          align-items: center;
          vertical-align: middle;
          margin: 0;
          padding: 0 calc(1.687 * 16px * .3);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div></div>"
`;

exports[`Input should be work with label 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><span class=\\"\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #888;
          background-color: #fafafa;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: 1px solid #eaeaea;
          border-left: 1px solid #eaeaea;
          border-right: none;
          border-bottom: 1px solid #eaeaea;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: none;
          border-right: 1px solid #eaeaea;
        }
      </style></span><div class=\\"input-wrapper lined    left-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    right-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div><span class=\\"right\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #888;
          background-color: #fafafa;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: 1px solid #eaeaea;
          border-left: 1px solid #eaeaea;
          border-right: none;
          border-bottom: 1px solid #eaeaea;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: none;
          border-right: 1px solid #eaeaea;
        }
      </style></span></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><label><span>Block Label</span><style>
        label {
          display: block;
          font-weight: normal;
          color: #444;
          padding: 0 0 0 1px;
          margin-bottom: 8px;
          font-size: 1rem;
          line-height: 1.5;
        }

        label > :global(*:first-child) {
          margin-top: 0;
        }

        label > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></label><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div></div>"
`;

exports[`Input should work with different sizes 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.313 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 0.5714rem;
            line-height: calc(1.125 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.125 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 0.8571rem;
            line-height: calc(1.5 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.5 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.875 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1.1429rem;
            line-height: calc(2.25 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.25 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: 50%;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: 50%;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div></div>"
`;

exports[`Input should work with different status 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #c0d8fc;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #8afb88;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #58f17a;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper lined    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.687 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: transparent;
            border: 1px solid #ffde40;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .lined.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #ffc438;
            background-color: inherit;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(1.875 * 16pt - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282D30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.875 * 16pt - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px transparent inset !important;
            -webkit-text-fill-color: #282D30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px inherit inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }
        </style></div></div>"
`;
